--- a/iPy/Main.ipynb
+++ b/iPy/Main.ipynb
@@ -80,6 +80,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"X_train shape:\", X_train.shape)  # Should be (input_size, m)\n",
+    "print(\"Y_train shape:\", Y_train.shape)  # Should be (1, m)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [
@@ -335,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,18 +353,21 @@
     "    print('safe10')\n",
     "    \"\"\"\n",
     "    Implements the softmax activation in numpy\n",
-    "    \n",
+    "\n",
     "    Arguments:\n",
-    "    Z -- numpy array of any shape...(size of current layer, no of samples)\n",
-    "    \n",
+    "    Z -- numpy array of shape (number of classes, number of samples)\n",
+    "\n",
     "    Returns:\n",
     "    A -- output of softmax(z), same shape as Z\n",
     "    cache -- returns Z as well, useful during backpropagation\n",
     "    \"\"\"\n",
-    "    exp_sum = np.sum(Z, axis=1, keepdims=True)\n",
-    "    \n",
-    "    A = np.divide(np.exp(Z - np.max(Z)),exp_sum)\n",
-    "    \n",
+    "    # Subtract max for numerical stability along axis=0 (per sample)\n",
+    "    Z_shift = Z - np.max(Z, axis=0, keepdims=True)\n",
+    "    exp_Z = np.exp(Z_shift)\n",
+    "    exp_sum = np.sum(exp_Z, axis=0, keepdims=True)\n",
+    "\n",
+    "    A = exp_Z / exp_sum\n",
+    "\n",
     "    return A, Z   #....A => ((size of current layer, no of samples))\n",
     "\n",
     "\n",
@@ -380,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,18 +416,17 @@
     "             stored for computing the backward pass efficiently\n",
     "    \"\"\"\n",
     "    \n",
-    "    if activation == \"softmax\":\n",
-    "        # Inputs: \"A_prev, W, b\". Outputs: \"A, activation_cache\".\n",
-    "        Z, linear_cache = linear_forward(A_prev, W, b) # linear_cache contains A_prev,W,b\n",
-    "        A, activation_cache = softmax(Z)  # activation_cache = Z\n",
-    "        #print('ac ',activation_cache)\n",
-    "    \n",
+    "    Z, linear_cache = linear_forward(A_prev, W, b)\n",
+    "\n",
+    "    if activation == \"sigmoid\":\n",
+    "        A, activation_cache = sigmoid(Z)  # You'll need to define sigmoid similarly to relu\n",
     "    elif activation == \"relu\":\n",
-    "        # Inputs: \"A_prev, W, b\". Outputs: \"A, activation_cache\".\n",
-    "        Z, linear_cache = linear_forward(A_prev, W, b)\n",
     "        A, activation_cache = relu(Z)\n",
-    "        #print('ac ',activation_cache)\n",
-    "    \n",
+    "    elif activation == \"softmax\":\n",
+    "        A, activation_cache = softmax(Z)\n",
+    "    else:\n",
+    "        raise ValueError(\"Unsupported activation function: \" + activation)\n",
+    "\n",
     "    assert (A.shape == (W.shape[0], A_prev.shape[1]))\n",
     "    cache = (linear_cache, activation_cache)\n",
     "\n",
@@ -423,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,14 +473,15 @@
     "    caches.append(cache)\n",
     "    #print(caches)\n",
     "    \n",
-    "    assert(AL.shape == (34,X.shape[1]))\n",
+    "    assert(AL.shape == (parameters['W'+str(L)].shape[0], X.shape[1]))\n",
+    "    print(\"AL final shape:\", AL.shape)\n",
     "            \n",
     "    return AL, caches"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,15 +503,18 @@
     "    \"\"\"\n",
     "    \n",
     "    m = Y.shape[1]\n",
-    "    \n",
-    "    # Compute loss from aL and y.\n",
-    "    cost = -np.divide(np.sum(np.sum(np.multiply(Y,np.log(AL)))),m)\n",
-    "    print('shape   ',cost.shape)\n",
-    "    cost = np.squeeze(cost) # To make sure your cost's shape is what we expect (e.g. this turns [[17]] into 17).\n",
-    "    \n",
-    "    print('shape   ',cost.shape)\n",
-    "    assert(cost.shape == ())\n",
-    "    \n",
+    "    epsilon = 1e-15  # small value to avoid log(0)\n",
+    "\n",
+    "    # Clip AL to avoid log(0)\n",
+    "    AL = np.clip(AL, epsilon, 1 - epsilon)\n",
+    "\n",
+    "    # Cross-entropy cost\n",
+    "    cost = - (1 / m) * np.sum(Y * np.log(AL))\n",
+    "\n",
+    "    cost = np.squeeze(cost)  # Convert to scalar\n",
+    "\n",
+    "    assert cost.shape == ()\n",
+    "\n",
     "    return cost"
    ]
   },
@@ -541,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,8 +579,7 @@
     "    db -- Gradient of the cost with respect to b (current layer l), same shape as b\n",
     "    \"\"\"\n",
     "    linear_cache, activation_cache = cache\n",
-    "    #print(cache,len(linear_cache),len(activation_cache))\n",
-    "    \n",
+    "\n",
     "    if activation == \"relu\":\n",
     "        dZ = relu_backward(dA, activation_cache)\n",
     "        dA_prev, dW, db = linear_backward(dZ, linear_cache)\n",
@@ -573,66 +588,65 @@
     "        dZ = softmax_backward(dA, activation_cache, y)\n",
     "        dA_prev, dW, db = linear_backward(dZ, linear_cache)\n",
     "        \n",
-    "    \n",
+    "    else:\n",
+    "        raise ValueError(f\"Unsupported activation function '{activation}'\")\n",
+    "\n",
+    "    # Optional assertions to verify shapes:\n",
+    "    A_prev, W, b = linear_cache\n",
+    "    assert dA_prev.shape == A_prev.shape\n",
+    "    assert dW.shape == W.shape\n",
+    "    assert db.shape == b.shape\n",
+    "\n",
     "    return dA_prev, dW, db"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: L_model_backward\n",
     "\n",
     "def L_model_backward(AL, Y, caches):\n",
-    "    #print('safe3')\n",
     "    \"\"\"\n",
     "    Implement the backward propagation for the [LINEAR->RELU] * (L-1) -> LINEAR -> SOFTMAX group\n",
-    "    \n",
+    "\n",
     "    Arguments:\n",
-    "    AL -- probability vector, output of the forward propagation (L_model_forward())\n",
-    "    Y -- true \"label\" vector (containing 0 if non-cat, 1 if cat)\n",
-    "    caches -- list of caches containing:\n",
-    "                every cache of linear_activation_forward() with \"relu\" (it's caches[l], for l in range(L-1) i.e l = 0...L-2)\n",
-    "                the cache of linear_activation_forward() with \"sigmoid\" (it's caches[L-1])\n",
-    "    \n",
+    "    AL -- probability vector, output of forward propagation, shape (no_classes, m)\n",
+    "    Y -- true labels vector (one-hot), shape (no_classes, m)\n",
+    "    caches -- list of caches from forward propagation\n",
+    "\n",
     "    Returns:\n",
-    "    grads -- A dictionary with the gradients\n",
+    "    grads -- dictionary with gradients:\n",
     "             grads[\"dA\" + str(l)] = ... \n",
     "             grads[\"dW\" + str(l)] = ...\n",
     "             grads[\"db\" + str(l)] = ... \n",
     "    \"\"\"\n",
     "    grads = {}\n",
-    "    L = len(caches) # the number of layers\n",
+    "    L = len(caches)  # number of layers\n",
     "    m = AL.shape[1]\n",
-    "    #print(Y.shape,AL.shape)\n",
-    "    #Y = Y.reshape(AL.shape) # after this line, Y is the same shape as AL\n",
     "    \n",
-    "    # Initializing the backpropagation\n",
-    "    dAL =  - (np.divide(Y, AL) - np.divide(1 - Y, 1 - AL))\n",
+    "    # Make sure Y has the same shape as AL\n",
+    "    # Y = Y.reshape(AL.shape)  # Uncomment if necessary\n",
     "    \n",
-    "    # Lth layer (SIGMOID -> LINEAR) gradients. Inputs: \"dAL, current_cache\". Outputs: \"grads[\"dAL-1\"], grads[\"dWL\"], grads[\"dbL\"]\n",
-    "    ### START CODE HERE ### (approx. 2 lines)\n",
-    "    current_cache = caches[L-1]\n",
-    "    #print('current_cache',current_cache)\n",
-    "    grads[\"dA\" + str(L-1)], grads[\"dW\" + str(L)], grads[\"db\" + str(L)] = linear_activation_backward(dAL, current_cache, activation='softmax', y=AL)\n",
-    "    #dAL,current_cache[0],current_cache[1]\n",
-    "    ### END CODE HERE ###\n",
+    "    # Initialize backpropagation for output layer\n",
+    "    # For softmax + cross-entropy, derivative simplifies to (AL - Y)\n",
+    "    dAL = AL - Y\n",
     "    \n",
-    "    # Loop from l=L-2 to l=0\n",
-    "    for l in reversed(range(L-1)):\n",
-    "        # lth layer: (RELU -> LINEAR) gradients.\n",
-    "        # Inputs: \"grads[\"dA\" + str(l + 1)], current_cache\". Outputs: \"grads[\"dA\" + str(l)] , grads[\"dW\" + str(l + 1)] , grads[\"db\" + str(l + 1)] \n",
-    "        ### START CODE HERE ### (approx. 5 lines)\n",
+    "    # Backprop for last layer (softmax)\n",
+    "    current_cache = caches[L - 1]\n",
+    "    grads[\"dA\" + str(L - 1)], grads[\"dW\" + str(L)], grads[\"db\" + str(L)] = linear_activation_backward(dAL, current_cache, activation='softmax', y=Y)\n",
+    "    \n",
+    "    # Loop backward for layers l = L-2 down to 0\n",
+    "    for l in reversed(range(L - 1)):\n",
     "        current_cache = caches[l]\n",
-    "        dA_prev_temp, dW_temp, db_temp = linear_activation_backward(grads['dA'+str(l+1)], current_cache, activation='relu',y=AL)\n",
+    "        dA_prev_temp, dW_temp, db_temp = linear_activation_backward(grads[\"dA\" + str(l + 1)], current_cache, activation='relu', y=Y)\n",
     "        grads[\"dA\" + str(l)] = dA_prev_temp\n",
     "        grads[\"dW\" + str(l + 1)] = dW_temp\n",
     "        grads[\"db\" + str(l + 1)] = db_temp\n",
-    "        ### END CODE HERE ###\n",
     "\n",
-    "    return grads"
+    "    return grads\n"
    ]
   },
   {
